tdf#167165: catch possible exceptions when trying to get HyperLinkName

The bugdoc has an image beneath the ToC. Moving the mouse cursor close
to the ToC's page numbers, the tooltip is generated; but the position
is over the image (aPos = {Node: {[75] {GrfNode}} Content: {0}}), and
that's what an SwXTextRange is generated from: xRange->m_pMark = NULL.

Trying to get its properties throws with this call stack:
  vcruntime140d.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 79
  swlo.dll!SwXTextRange::getPropertyValue(const rtl::OUString & rPropertyName) Line 1498
  swlo.dll!SwEditWin::RequestHelp(const HelpEvent & rEvt) Line 456
  vcllo.dll!ImplHandleMouseHelpRequest(vcl::Window * pChild, const Point & rMousePos) Line 186
  vcllo.dll!ImplHandleMouseEvent(const VclPtr<vcl::Window> & xWindow, NotifyEventType nSVEvent, bool bMouseLeave, __int64 nX, __int64 nY, unsigned __int64 nMsgTime, unsigned short nCode, MouseEventModifiers nMode) Line 738
  vcllo.dll!ImplHandleSalMouseMove(vcl::Window * pWindow, const SalMouseEvent * pEvent) Line 2330
  vcllo.dll!ImplWindowFrameProc(vcl::Window * _pWindow, SalEvent nEvent, const void * pEvent) Line 2663
  vcllo.dll!SalFrame::CallCallback(SalEvent nEvent, const void * pEvent) Line 310
  vclplug_winlo.dll!ImplHandleMouseMsg(HWND__ * hWnd, unsigned int nMsg, unsigned __int64 wParam, __int64 lParam) Line 3322

The exception wasn't caught, and crashed.

Change-Id: I9e80c1fc5f78771fce2ec6fe047dfe3d37e0e60b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186806
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit c9c96987c31efe7108d0588ef097e952d623238c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186937
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>